Fixed CSS further + Fixed adding invisible todo bug

--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,4 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-* {
+*{
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -46,13 +32,9 @@ h1 {
   font-size: 24px;
 }
 
-.complete {
+.completed {
   text-decoration: line-through;
   opacity: 0.4;
-}
-
-.todo-form {
-  margin-bottom: 32px;
 }
 
 .inputTodo {
@@ -63,10 +45,6 @@ h1 {
   width: 320px;
   background: transparent;
   color: #fff;
-}
-
-.todo-input::placeholder {
-  color: #e2e2e2;
 }
 
 .addTodo {
@@ -84,30 +62,46 @@ h1 {
   text-transform: capitalize;
 }
 
-.todo-input.edit {
-  border: 2px solid #149fff;
-}
-
-.todo-button.edit {
+.delButton {
+  margin-top: 10px;
+  margin-left: 5px;
+  margin-right: 5px;
+  padding: 8px;
+  border: none;
+  border-radius: 4px 4px 4px 4px;
+  cursor: pointer;
+  outline: none;
   background: linear-gradient(
     90deg,
-    rgba(20, 159, 255, 1) 0%,
-    rgba(17, 122, 255, 1) 100%
+    rgba(93, 12, 255, 1) 0%,
+    rgba(155, 0, 250, 1) 100%
   );
-  padding: 16px 22px;
+  color: #fff;
+  text-transform: capitalize;
 }
 
-.todo-container {
-  display: flex;
-  flex-direction: row;
-  position: relative;
+.editTodo {
+  margin-left: 5px;
+  padding: 8px;
+  border: none;
+  border-radius: 4px 4px 4px 4px;
+  cursor: pointer;
+  outline: none;
+  background: linear-gradient(
+    90deg,
+    rgba(93, 12, 255, 1) 0%,
+    rgba(155, 0, 250, 1) 100%
+  );
+  color: #fff;
+  text-transform: capitalize;
 }
 
-.todo-row {
+.todoText {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 4px auto;
+  margin: 24px auto;
+  margin-bottom: 8px;
   color: #fff;
   background: linear-gradient(
     90deg,
@@ -115,9 +109,9 @@ h1 {
     rgba(255, 84, 17, 1) 100%
   );
 
-  padding: 16px;
+  padding: 12px;
   border-radius: 5px;
-  width: 90%;
+  width: 50%;
 }
 
 .todo-row:nth-child(4n + 1) {
@@ -142,20 +136,4 @@ h1 {
     rgba(20, 159, 255, 1) 0%,
     rgba(17, 122, 255, 1) 100%
   );
-}
-
-.icons {
-  display: flex;
-  align-items: center;
-  font-size: 24px;
-  cursor: pointer;
-}
-
-.delete-icon {
-  margin-right: 5px;
-  color: #fff;
-}
-
-.edit-icon {
-  color: #fff;
 }
